Update OboOntology and OboOntologyTerm to remove Guava dependency and make fully immutable.